--- a/LinearRegressionProject/Project9/Source.ipynb
+++ b/LinearRegressionProject/Project9/Source.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "d6d4616e",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "[205 rows x 26 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "id": "e834f68e",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "id": "181184e9",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "max    6600.000000   49.000000   54.000000  45400.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,255 +642,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "id": "2b88a6b6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['gas', 'diesel'], dtype=object)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.fueltypes.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4c1d1dbb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['std', 'turbo'], dtype=object)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.aspiration.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "23e09b0a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['two', 'four'], dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.doornumbers.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "2b73bb48",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['convertible', 'hatchback', 'sedan', 'wagon', 'hardtop'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.carbody.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "a5c0a83b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['rwd', 'fwd', '4wd'], dtype=object)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.drivewheels.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2d5b3296",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['four', 'six', 'five', 'three', 'twelve', 'two', 'eight'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.cylindernumber.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c53afcf8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>diesel</th>\n",
-       "      <th>gas</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>203</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>204</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>205 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     diesel  gas\n",
-       "0         0    1\n",
-       "1         0    1\n",
-       "2         0    1\n",
-       "3         0    1\n",
-       "4         0    1\n",
-       "..      ...  ...\n",
-       "200       0    1\n",
-       "201       0    1\n",
-       "202       0    1\n",
-       "203       1    0\n",
-       "204       0    1\n",
-       "\n",
-       "[205 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dummies = pd.get_dummies(df['fueltypes'])\n",
-    "dummies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "569dc6f5",
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +698,7 @@
        "       'volvo 264gl', 'volvo diesel', 'volvo 246'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,8 +709,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
+   "id": "4c1d1dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['std', 'turbo'], dtype=object)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.aspiration.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "23e09b0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['two', 'four'], dtype=object)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.doornumbers.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "2b73bb48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['convertible', 'hatchback', 'sedan', 'wagon', 'hardtop'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.carbody.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "a5c0a83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['rwd', 'fwd', '4wd'], dtype=object)"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drivewheels.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "2d5b3296",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['four', 'six', 'five', 'three', 'twelve', 'two', 'eight'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.cylindernumber.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "c53afcf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummies1 = pd.get_dummies(df['fueltypes'])\n",
+    "dummies2 = pd.get_dummies(df['drivewheels'])\n",
+    "dummies3 = pd.get_dummies(df['carbody'])\n",
+    "dummies4 = pd.get_dummies(df['aspiration'])\n",
+    "dummies5 = pd.get_dummies(df['doornumbers'])\n",
+    "dummies6 = pd.get_dummies(df['enginetype'])\n",
+    "dummies7 = pd.get_dummies(df['cylindernumber'])\n",
+    "dummies8 = pd.get_dummies(df['fuelsystem'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "569dc6f5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = df.drop(['fueltypes','drivewheels','carbody','price','name','aspiration','doornumbers','enginetype','cylindernumber','fuelsystem'],axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "id": "d1e97564",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['wheelbase', 'carlength', 'carwidth', 'carheight', 'curbweight',\n",
+       "       'enginesize', 'boreratio', 'stroke', 'compressionratio', 'horsepower',\n",
+       "       'peakrpm', 'citympg', 'highwaympg', 'diesel', 'gas', '4wd', 'fwd',\n",
+       "       'rwd', 'convertible', 'hardtop', 'hatchback', 'sedan', 'wagon', 'std',\n",
+       "       'turbo', 'four', 'two', 'dohc', 'dohcv', 'l', 'ohc', 'ohcf', 'ohcv',\n",
+       "       'rotor', 'eight', 'five', 'four', 'six', 'three', 'twelve', 'two',\n",
+       "       '1bbl', '2bbl', '4bbl', 'idi', 'mfi', 'mpfi', 'spdi', 'spfi'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final = pd.concat([df,dummies1,dummies2,dummies3,dummies4,dummies5,dummies6,dummies7,dummies8],axis='columns')\n",
+    "final.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "91634afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<seaborn.axisgrid.PairGrid at 0x18762728880>"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.pairplot(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "6df4a728",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(final,target,test_size=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "bf29f202",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "model = LinearRegression()\n",
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "327351fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([17257.66346521,  8540.18800979,  6051.50796297,  6762.39916116,\n",
+       "       11410.50451844, 13153.34278555, 25861.90155548,  6411.87776111,\n",
+       "        6798.86383121, 15045.64937481, 14781.82935218, 30482.27085216,\n",
+       "       10596.80859758,  7679.80102114, 10317.33674262, 40178.30888879,\n",
+       "       11022.01745406,  7749.24022943,  8163.73016416, 10594.98772884,\n",
+       "       11173.86951064])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "19796b20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.935367035648391"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d027ca1",
    "metadata": {},
    "outputs": [],
    "source": []
